# tranquil-breeze

./: .gitignore  Cargo.toml  mod.rs  package-lock.json  package.json
api/: Cargo.toml
api/src/: activations.rs  config.rs  error.rs  extractor.rs  lib.rs  users.rs  workspaces.rs
client/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
client/src/: app.d.ts  app.html  hooks.server.ts  types.ts
client/src/lib/: links.ts  types.ts
client/src/lib/auth/: index.ts
client/src/lib/components/: Alert.svelte  Breadcrumbs.svelte  Button.svelte  Dropdown.svelte  Input.svelte  Navbar.svelte  Popper.svelte  Sidebar.svelte  Spinner.svelte  index.ts
client/src/lib/components/Common/: Button.svelte  (+6 more)
client/src/lib/css/: _color.scss  _common.scss  _spacing.scss  _variables.scss  global.css  global.scss
client/src/lib/form/: field.ts  form.ts  index.ts  message.ts  types.ts
client/src/routes/: +layout.svelte
client/src/routes/(auth)/: +layout.svelte  auth.scss
client/src/routes/(authenticated)/: +layout.svelte
client/src/routes/login/: +page.svelte
client/src/routes/signup/: +page.svelte
entity/: Cargo.toml
entity/src/: lib.rs  user.rs  user_workspace_link.rs  workspace.rs  workspace_user.rs  workspace_user_activation.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20230829_214152_create_workspace_table.rs  m20230830_151845_create_user_table.rs  m20230830_162846_create_workspace_table.rs  m20230830_163103_create_workspace_user_activation_table.rs  m20230830_163103_create_workspace_user_table.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
(+26 files in other folders)
