[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
uuid = "1.4.1"

[dependencies.sea-orm-migration]
version = "0.12.2"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]