[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
entity = { path = "../entity" }
serde = { version = "1.0.130", features = ["derive"] }

[dependencies.sea-orm]
version = "0.12.2"
features = ["runtime-async-std-native-tls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt"] }
